# dailearn

./: .gitignore  README.md  build.gradle  build_plugin.sh  compile_plugin.sh  gradle.properties  import-summary.txt  settings.gradle
Camera/: build.gradle
Camera2/: build.gradle  proguard-rules.pro
EmojiPanel/: .gitignore  build.gradle
EventBus/: build.gradle
ExtShare/: build.gradle  proguard-rules.pro
FaceClient/: build.gradle
FaceVerification/: build.gradle
Glide3.7/: build.gradle
Glide4.x/: build.gradle
GreenDao/: build.gradle
Http/: build.gradle
ImageLoader/: build.gradle
MQTT/: build.gradle
MainApp/: .gitignore  build.gradle
ObjectBox/: build.gradle
ObjectBox/objectbox-models/: default.json
OkHttp2.5/: .gitignore  build.gradle
OkHttp3.x/: build.gradle
RemoteClient/: build.gradle
RichText/: build.gradle
ScanAnimation/: build.gradle
app/: .gitignore  build.gradle
binder-demo/: Android.bp
binder-demo/client/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jni-demo/: Android.bp  Android.mk  AndroidManifest.xml
jni-demo/jni/: Android.bp  com_sleticalboy_sample_jnidemo_JniDemo.cpp  jni_init.cpp
lib_dl/aosp-stub/: build.gradle
lib_dl/host/: build.gradle
lib_dl/puppet/: proguard-rules.pro
lib_dy_vd/: build.gradle  proguard-rules.pro
lib_ffmpeg/: CMakeLists.txt  build.gradle
lib_file_server/: build.gradle
lib_free_videos/: build.gradle  proguard-rules.pro
lib_hidden_relieve/: CMakeLists.txt  build.gradle
lib_jni/: CMakeLists.txt  build.gradle
lib_jvmti/: CMakeLists.txt  build.gradle
lib_luban/: CMakeLists.txt  build.gradle
lib_net/: build.gradle
lib_plugin/: build.gradle
lib_sqlite_orm/: build.gradle
pytest/: .gitignore  algo_component_release.py  aosp_project_tools.py  main.py
pytest/etools/: algo_component_release.py
pytest/src/: adsfad.py  (+3 more)
sSLClientDemo/: build.gradle
sample-arch/: build.gradle
smalitest/: build.gradle
sub-python/: .gitignore
sub-python/cython/c-p/: .gitignore  CMakeLists.txt  Makefile  algo_args.pb.cc  algo_args.pb.h  algo_args.proto  algo_args_pb2.py  algo_args_pb2.pyi  audio_whisper.proto  main.cc  py_algo_spec.proto  run.sh  sample  sample2  samples.py
sub-python/cython/c-p/protos/: algo.proto  algox.proto  audio_whisper.proto  py_algo.proto
sub-python/cython/c-p/scripts/: algo_base.py  algo_sample_impl.py  fifo-server.py  samples.py  socket-server.py
sub-python/cython/c-p/src/: algo_base.py  algo_sample_impl.py  fifo-client.cpp  fifo-client.h  lib_main.cc  lib_main.h  main.cc  main2.cc  samples.py  socket-client.cpp
sub-python/cython/c-p/testdata/: request-files.pbuf.txt  request-full-cpp.pbuf.txt  request-full-python.pbuf.txt  request.pbuf.txt
(+1787 files in other folders)
